Start active typing authors notice feature

--- a/client/index.html
+++ b/client/index.html
@@ -14,6 +14,7 @@
               <input type="text" id="input-text" class="user-input__text" placeholder="Continue story here!"/>
               <button class="user-input__submit">Add to story</button>
           </form>
+          <small class="typing-notice" id="active-notice"><span class="typing-notice__number" id="active-authors"></span> authors are typing</small>
         </footer>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.5.0/socket.io.min.js" charset="utf-8"></script>
